frontend: added callback tratives

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/alertify.css" />
     <title>Smarkio Voice</title>
   </head>
   <body>
     <section class="page-wrap">
-      <header><br /></header>
+      <header><img src="./assets/img/logo.png"></header>
       <div class="comment-container">
         <div class="comment-box">
           <div class="comment-box-container">
@@ -31,6 +32,7 @@
             </div>
           </div>
         </div>
+        <div class="line"></div>
         <div class="commentary-container">
 
         </div>
@@ -43,7 +45,8 @@
     <script src="./assets/js/jscolor.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./assets/js/watson-speech.js"></script>
+    <script src="./assets/js/alertify.min.js"></script>
     <script src="./assets/js/main.js"></script>
-    <script></script>
+    <script>alertify.set('notifier','position', 'top-right');</script>
   </body>
 </html>
