frontend: added edit method

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="page-wrap">
-      <header><img src="./assets/img/logo.png"></header>
+      <header><img src="./assets/img/logo.png">&nbsp; | Voice</header>
       <div class="comment-container">
         <div class="comment-box">
           <div class="comment-box-container">
